fix background link alignment

--- a/app/assets/stylesheets/cities/stylesheet.css.less
+++ b/app/assets/stylesheets/cities/stylesheet.css.less
@@ -515,7 +515,7 @@ a {
           background-size: cover;
           background-position: center;
           position: relative;
-          a {
+          a.background-link {
             position: absolute;
             height: 100%;
             width: 100%;
